<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:descendantFocusability="blocksDescendants"
             android:background="@color/colorPrimary">

    <ImageView
            android:id="@+id/thumbnail_imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="vertical">

        <TextView
                android:id="@+id/title_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="@dimen/margin10"
                android:ellipsize="end"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text=""
                android:textSize="12sp"
                android:textColor="@color/white"/>

        <TextView
                android:id="@+id/author_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin10"
                android:layout_marginLeft="@dimen/margin10"
                android:ellipsize="end"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text=""
                android:textSize="12sp"
                android:textColor="@color/white"/>

    </LinearLayout>

    <CheckBox android:id="@+id/favourite_checkbox"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>

</FrameLayout>